--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+    <head>
+        <meta charset="utf-8">
+        <title>futebol</title>
+        <link rel="stylesheet"href="style.css">
+        </head>
+
+
+</body>
 <h1>informacoes de futebol</h1>
 
 <p>uma ideia geral de como o mercado de transferências funciona no futebol brasileiro.</p>
@@ -12,3 +22,5 @@
 
 <p>Contratos e renovações: As negociações de contratos e renovações de jogadores são parte fundamental do
     mercado de transferências, pois determinam o futuro dos atletas em seus clubes.</p>
+</body>
+</html>
