--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <meta charset="utf-8">
+        <meta charset="UTF-8">
         <title>futebol</title>
-        <link rel="stylesheet"href="style.css">
+        <link rel="stylesheet" href="style.css">
         </head>
 
 
