--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="pt-br">
     <head>
         <meta charset="UTF-8">
-        <title>futebol</title>
+        <title>Futebol</title>
         <link rel="stylesheet" href="style.css">
-        </head>
+    </head>
 
 
 </body>
