--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </head>
 
 
-</body>
+<body>
 <h1>informacoes de futebol</h1>
 
 <p>uma ideia geral de como o mercado de transferências funciona no futebol brasileiro.</p>
